--- a/views/show.erb
+++ b/views/show.erb
@@ -9,11 +9,11 @@
 
     <form action="/articles/new" method="post">
       <label for="title">Title:</label>
-      <input type="text" id="article" name="title">
+      <input type="text" id="article" name="title" required>
       <label for="url">URL:</label>
-      <input type="text" id="article" name="url">
+      <input type="url" id="article" name="url" required>
       <label for="description">Description:</label>
-      <input type="text" id="article" name="description">
+      <input type="text" id="article" name="description" required minlength="20">
       <input type="submit">
     </form>
   </body>
